Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/T8023545/MisleadingErrorMsgDiamondPlusPrivateCtorTest.out
MisleadingErrorMsgDiamondPlusPrivateCtorTest.java:10:31: compiler.err.report.access: <E>MyClass(), private, MyClass
1 error
